[package]
name = "sled-tables"
version = "0.1.0"
authors = ["Ivan Temchenko <35359595i@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sled = "0.34.6"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11.1"
serde_derive = "1.0.106"
arrayref = "0.3.6"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.1"
